# mazes_for_programmers

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: benchmark.yml  cmake.yml  publish.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: maze_benchmark.cpp
dev/bench/: data.js
res/: ICN.sh  MazeIcon.icns
src/: gui.cpp  maze.cpp  maze.h  maze_generators.cpp  maze_generators.h  stats.cpp
tests/: CMakeLists.txt
tests/src/: maze_test.cpp
